<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context="com.example.android.venicetourguide.LocationDetailActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/location_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            tools:src="@drawable/basilica" />

        <TextView
            android:id="@+id/location_title"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/location_image"
            android:padding="@dimen/large_padding"
            android:shadowColor="@android:color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:textColor="@android:color/white"
            tools:text="@string/basilica" />

        <LinearLayout
            android:id="@+id/info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_image"
            android:orientation="vertical"
            android:padding="@dimen/large_padding">
            <TextView
                android:id="@+id/location_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="@dimen/default_padding"
                android:paddingLeft="@dimen/default_padding"
                tools:text="@string/basilica_address" />
            <TextView
                android:id="@+id/location_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="@dimen/default_padding"
                android:paddingLeft="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                tools:text="@string/basilica_phone" />
            <TextView
                android:id="@+id/location_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_url"
                android:drawablePadding="@dimen/default_padding"
                android:paddingLeft="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                tools:text="@string/basilica_url" />

        </LinearLayout>

        <TextView
            android:id="@+id/location_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarge_padding"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginRight="@dimen/default_padding"
            tools:text="@string/basilica_description" />
    </RelativeLayout>
</ScrollView>